Commons (C) Black Rook Software, All rights reserved.


Slated for 2.31.2
=================

- Removed unnecessary overloadings of Common.close(...).
- Fixed: Made PairGroup.intersection(...) a little more optimized.
- Deprecated: PairGroup.random(Random, int) in favor of a more descriptive name.
- Added: PairGroup.randomDensity(Random, float).
- Added: PairGroup.randomAmount(Random, int).
- Added: hashCode() methods to TupleXY classes.
- Added: RMath.correctClippingAspect(...).
- Added: Common.arrayElement(T[], int)

Changed in 2.31.1
=================

- Changed Common HTTP request functionality, added some methods.


Changed in 2.31.0
=================

- Added: Matrix4X chaining commands and other commands.
- Added: Interface Dumpable<T>: dumps contents to an array of a similar type T.
- Added: AbstractMap functions toArrayKeys(K[]), toArrayValues(V[]): dumps 
  keys/values to an array of a corresponding type.
- Added: RMath.getIntersectionCylinder(...).


Changed in 2.30.4
=================

- Changed: ComparatorList getIndexOf() did not follow AbstractVector's method 
  policy.

Changed in 2.30.3
=================

- Changed: ResettableIterator implementations honor remove() interface policy.

Changed in 2.30.2
=================

- Fixed: Vector angle calls now sanitize angle ranges, according to spec.


Changed in 2.30.1
=================

- Added: Some additional string functions to Common.
- Fixed: RMath.getAngularDistanceRadians/Degrees() should have really called 
  getRelativeAngleDegrees/Radians() with an abs() added to them.

Changed in 2.30.0
=================

- MAJOR: Deprecated packages, classes, and methods PURGED.
- Fixed: Some classes used Common.getLocal(Class) a lot, hindering performance 
  significantly.


Changed in 2.21.0
=================

NOTE: Next version will be removing deprecated packages, classes, and methods!

- Changed: Major javadoc fixes.
- Updated: Copyright clauses for 2016.
